# intra

./: .example.env  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-tests.yml
examples/: tst_flex.py  tst_opt.py  tst_pc.py  tst_price_extremes.py  tst_timeslot.py
src/algorithm_base_class/: algorithm.py
tests/: conftest.py  test_check_delivery_duration.py  test_find_overlapping_contracts.py  test_overlapping_contracts.py
